[package]
name = "ecdsa-secp256k1-example"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ECDSA signature and verification with secp256k1 in Rust"
repository = "https://github.com/0xRaiseX/ECDSA"

[dependencies]
rand = "0.8"
secp256k1 = { version = "0.28.0", features = ["rand"] }
sha2 = "0.10.8"
hex = "0.4.3"